# sqlite-explorer

./: README.md  pyproject.toml  sqlite_explorer.py
src/sqlite_explorer/: __init__.py
