[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-explorer"
version = "0.1.0"
description = "A lightweight CLI tool for exploring SQLite databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "masaad01" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sqlite-explorer = "sqlite_explorer:main"

[project.urls]
Homepage = "https://github.com/masaad01/sqlite-explorer"
